samples/_failures_safe/1761344951_5f8e68_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cbe6f470.c: In function ‘parser_parse_term’:
./samples/SAFE/__tmp_cbe6f470.c:159:13: error: expected declaration or statement at end of input
  159 |             }
      |             ^
./samples/SAFE/__tmp_cbe6f470.c:159:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cbe6f470.c:159:13: error: expected declaration or statement at end of input
